--- a/read.ipynb
+++ b/read.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of Copy of Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN3Gg+LRfwbFR8p32HOKHtw",
+      "authorship_tag": "ABX9TyNu5lwZoSJj+dymiKuDEJdZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,29 +73,13 @@
       "metadata": {
         "id": "ZernW0nLoE0W",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "f0a7a39b-ec88-4616-ed61-98458730dbdd"
+        "colab": {}
       },
       "source": [
         "!ls '/content/gdrive/My Drive/COT_DATA/'"
       ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "annual_0.TXT   annual_14.txt  annual_19.txt  annual_4.txt  annual_9.txt\n",
-            "annual_10.txt  annual_15.txt  annual_1.TXT   annual_5.txt\n",
-            "annual_11.txt  annual_16.txt  annual_20.txt  annual_6.txt\n",
-            "annual_12.txt  annual_17.txt  annual_2.TXT   annual_7.txt\n",
-            "annual_13.txt  annual_18.txt  annual_3.txt   annual_8.txt\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -138,6 +122,59 @@
             "tags": []
           },
           "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NbRU6SlevvPn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(16,8))\n",
+        "plt.title('COT DATA')\n",
+        "plt.xlabel('weeks')\n",
+        "plt.ylabel('some var')\n",
+        "plt.plot(df['Open Interest (All)'])\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fGKJd7wZxcWR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "77331849-69db-408a-df08-015e0c764a60"
+      },
+      "source": [
+        "df = df['Open Interest (All)']\n",
+        "df.head(4)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    131998\n",
+              "1    135738\n",
+              "2    134549\n",
+              "3    135803\n",
+              "Name: Open Interest (All), dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
         }
       ]
     }
